--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-hooks-jwt-auth",
+  "name": "sawariya-store-ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,15 +9,16 @@
     "axios": "^0.26.1",
     "bootstrap": "^4.6.0",
     "react": "^17.0.2",
+    "react-camelcase": "^1.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-validation": "^3.0.7",
     "validator": "^13.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -35,5 +36,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "."
 }
