EB Deployment files

--- a/.github/workflows/eb.yaml
+++ b/.github/workflows/eb.yaml
@@ -22,20 +22,6 @@ jobs:
         # zip all files except .git
         run: zip -r deploy-sawariya-store-ui-app.zip * -x "**.git**"
 
-      - name: Get timestamp
-        uses: gerred/actions/current-time@main
-        id: current-time
-
-      - name: Run string replace
-        uses: frabert/replace-string-action@main
-        id: format-time
-        with:
-          # replaces '[:\.]+' in the timestamp with '-'
-          pattern: '[:\.]+'
-          string: "${{ steps.current-time.outputs.time }}"
-          replace-with: '-'
-          flags: 'g'
-
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v21
         with:
@@ -44,7 +30,8 @@ jobs:
           aws_secret_key: "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
           application_name: inventory-management-ui
           environment_name: Inventorymanagementui-env
-          version_label: "app-${{ steps.format-time.outputs.replaced }}"
+          #version_label: "deploy-sawariya-store-ui-app-${{ steps.format-time.outputs.replaced }}"
+          version_label: "deploy-sawariya-store-ui-app-0.0.1"
           region: us-east-2
           deployment_package: deploy-sawariya-store-ui-app.zip
 
