--- a/.github/workflows/eb.yaml
+++ b/.github/workflows/eb.yaml
@@ -34,6 +34,7 @@ jobs:
           version_label: "deploy-sawariya-store-ui-app-0.0.1"
           region: us-east-2
           deployment_package: deploy-sawariya-store-ui-app.zip
+          use_existing_version_if_available : true
 
       - name: Deployed!
         run: echo App deployed to ELB
