--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "validator": "^13.0.0"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test"
   },
